--- a/src/assets/components/_sites.scss
+++ b/src/assets/components/_sites.scss
@@ -13,7 +13,7 @@
         color: $darkNavbar;
     }
 
-    .data-grid {
+    .dataGrid {
         @include dataGrid;
     }
 }
